[package]
name = "dnser"
version = "0.1.1"
edition = "2021"
authors = ["Nikolai Petrov <npv3s@skopa.dev>"]
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1.0.93"
async-trait = "0.1.83"
clap = { version = "4.5.21", features = ["derive", "env"] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
hickory-server = "0.24.2"
hickory-client = "0.24.2"
ipnet = "2.10.1"